# task_cli

./: README.md  pyproject.toml  requirements.txt  script.py  tasks.json  todos.json
task_cli/: script.py
