[project]
name = "task-cli"
version = "0.1.0"
description = "A simple todo CLI"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "typer[all]"
]

[project.scripts]
task-cli = "task_cli.script:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"